# roads

./: .gitignore  README.md  pyproject.toml  roads.code-workspace
.dvc/: config
.ipynb_checkpoints/: README-checkpoint.md
datasets/: .dvcignore  .gitignore  T003-extract-and-place-on-backdrops-manually.dvc  T004-taco-crops.dvc  clean_samples.dvc  clean_samples_segs.dvc  crops.dvc  mapillary.dvc  openimages-subset-p1-p2-001-2000.tar.dvc  samples_mapillary.dvc  taco.tar.dvc  taco_with_seg_masks.dvc
mapillary_downloader/: .gitignore  AGENTS.md  pyproject.toml  testing.ipynb
mapillary_downloader/src/mapillary_downloader/: __init__.py  cli.py  geocoder.py  iterators.py
mapillary_downloader/src/mapillary_downloader/orchestrator/: chunk_dwn.py
mapillary_downloader/tests/: test_api_client.py  test_tiles.py
mtrain/: pyproject.toml
mtrain/notebooks/: CropPrep.ipynb  DownloadRandomGarbage.ipynb  MorphSmallNet-2.py  MorphSmallNet.py  SmallNet.ipynb  SmallNet.py  SmallUNet.py  SynthV3.ipynb  T002-synth.ipynb  T003-synth.ipynb  T003Colab_tmp.ipynb  Uncentered_007.ipynb  Warp.ipynb  analyse.ipynb  colab_tmpl.ipynb  crop-speed.ipynb  datagen-segm.ipynb  extract.ipynb  gen_data.ipynb  generate.ipynb  manage_results.ipynb  open_images_v7.ipynb  run_experiment.py  run_experiment_refactored_cached_2.py  run_show_res.ipynb  seg.ipynb  sp_algo.ipynb  template.ipynb  test-datagen-perf.ipynb  test_model.ipynb  train_unit.ipynb  unet.ipynb  visu.ipynb
mtrain/notebooks/.ipynb_checkpoints/: SmallNet-checkpoint.ipynb
mtrain/notebooks/hello/: history.csv
mtrain/scripts/colab/: tardvc.sh  train_unet.py
mtrain/src/mtrain/: __init__.py  cache.py  chunk.py  color.py  distort.py  experiment.py  horizon.py  luminosity.py  random.py  scale.py  superpose.py  tqdm.py  utils.py
mtrain/src/mtrain/data_prep/: README.md  prep_crops.py  prep_img.py
mtrain/src/mtrain/label_studio/: extract_frags.py  images.py  json_export.py
mtrain/src/mtrain/label_studio/crops/: __init__.py  extract.py  ipykmeans.py  kmeans.py  prepare.py
mtrain/src/mtrain/seg/: cityscapes.py
mtrain/src/mtrain/smallnet/: __init__.py  bbox.py  coco.py  extract.py  predict.py  tfms.py  tile.py
mtrain/src/mtrain/smallnet/unet/: extract.py  openimages.py  predict.py  train.py
mtrain/src/mtrain/smallnet/unet/extract/: cropping_bak.py  draw.py  taco_to_fastai.py
mtrain/src/mtrain/smallnet/unet/extract/cropping/: __init__.py  cut.py  engulf.py  utils.py
mtrain/src/mtrain/synth/: gen.py  tfms.py  v1.py  v2.py  v3.py
mtrain/src/mtrain/yolo/: draw.py  predict.py  split.py  tfms.py
training/: README.md  pyproject.toml
training/notebook/: extract_garbage.ipynb  fragment_superposition.ipynb  fragment_superposition.py  session.txt  superpose.ipynb  superpose.py  synthetic_garbage_generator.ipynb  synthetic_garbage_generator.py  test.ipynb  try_fastai.ipynb  vis.ipynb
training/scripts/: color_picker.py  gen_data.py  gen_data2.py  mv_to_s3.sh  yolo_split_ds.py
(+34 files in other folders)
