[project]
name = "mtrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "narang99", email = "hariom2711@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.4",
    "fastai>=2.8.6",
    "fastprogress>=1.1.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-contrib-nbextensions>=0.7.0",
    "pycocotools>=2.0.11",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "ultralytics>=8.4.6",
]

[project.scripts]
mtrain = "mtrain:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
